# Melody-Plus

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  readme.md
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: data.rs  main.rs
app/: Cargo.toml
app/src/: auth.rs  battery.rs  main.rs  spotify.rs  wifi.rs
app/src/spotify/: album_base.rs  album_restriction_object.rs  album_type.rs  artist_discography_album_object.rs  audio_analysis_object.rs  audio_analysis_object_meta.rs  audio_analysis_object_track.rs  audiobook_object.rs  author_object.rs  change_playlist_details_request.rs  chapter_object.rs  copyright_object.rs  create_playlist_request.rs  currently_playing_context_object.rs  cursor_paging_play_history_object.rs  cursor_paging_simplified_artist_object.rs  device_object.rs  episode_object.rs  episode_restriction_object.rs  external_id_object.rs  followers_object.rs  get_a_users_available_devices_200_response.rs  get_an_artists_top_tracks_200_response.rs  get_categories_200_response.rs  get_categories_200_response_categories.rs  get_followed_200_response.rs  get_multiple_albums_200_response.rs  get_multiple_episodes_200_response.rs  get_multiple_shows_200_response.rs  get_recommendation_genres_200_response.rs  get_users_top_artists_and_tracks_200_response_all_of_items_inner.rs  image_object.rs  narrator_object.rs  paging_featured_playlist_object.rs  paging_playlist_object.rs  paging_saved_album_object.rs  paging_saved_episode_object.rs  paging_saved_show_object.rs  paging_simplified_album_object.rs  paging_simplified_chapter_object.rs  (+25 more)
app/src/wifi/: linux.rs
src/: main.rs  spotify.rs  wifi.rs
src/spotify/: add_tracks_to_playlist_request.rs  album_object.rs  artist_object.rs  audio_features_object.rs  audiobook_base.rs  category_object.rs  chapter_base.rs  chapter_restriction_object.rs  context_object.rs  cursor_object.rs  cursor_paging_object.rs  disallows_object.rs  episode_base.rs  error_object.rs  explicit_content_settings_object.rs  external_url_object.rs  follow_artists_users_request.rs  follow_playlist_request.rs  get_an_album_401_response.rs  get_available_markets_200_response.rs  get_multiple_artists_200_response.rs  get_multiple_audiobooks_200_response.rs  get_new_releases_200_response.rs  get_several_audio_features_200_response.rs  get_several_chapters_200_response.rs  get_users_top_artists_and_tracks_200_response.rs  linked_track_object.rs  paging_artist_discography_album_object.rs  paging_artist_object.rs  paging_object.rs  paging_playlist_track_object.rs  paging_saved_track_object.rs  paging_simplified_audiobook_object.rs  paging_simplified_show_object.rs  paging_simplified_track_object.rs  paging_track_object.rs  play_history_object.rs  playlist_tracks_ref_object.rs  queue_object_currently_playing.rs  remove_episodes_user_request.rs  (+19 more)
src/wifi/: windows.rs
web/: Cargo.toml
