[package]
name = "rust_desktop_"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
base64 = "0.21.4"
iced = {version="0.10",features=["image","tokio","debug","qr_code"]}
querystring = "1.1.0"
rand = "0.8.5"
qrcode = "0.12"
image = "0.23.14"
reqwest = { version = "0.11", features = ["json"] }
serde = { version="1.0.188", features = ["derive"]}
urlencoding = "2.1.3"
hex = "0.4.3"
sha2 = "0.10.8"
chrono = "0.4.31"
color-thief = "0.2.2"
bytes = "1.5.0"
serde_json = "1.0.107"
