[package]
name = "melody-plus"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Justin Wiblin <justinw@cosiestdevil.uk>"]
publish = false
readme = "readme.md"
[package.metadata.winres]
ProductName="Melody Plus"
FileDescription="Melody Plus"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
reqwest = { version = "0.12.2", features = ["json","rustls-tls","blocking"],default-features = false }
serde = { version = "1" ,features = ["derive"]}
serde_with = "3.7.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
time = "0.3.34"
color-thief = "0.2.2"
image = "0.25.0"
rgb = "0.8.37"
chrono = "0.4.37"
i2cdev = "0.6"
speedy2d = { version = "2.1.0", path= "../Speedy2D" }
color-rs = "0.8.0"
log = "0.4.21"
simplelog = "0.12.2"