[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0" }
serde = "1.0.197"
sqlx = { version = "0.7", features = [ "runtime-tokio","postgres","macros" ] }
rsa = { version = "0.9.6",features = ["sha2"] }
rand = "0.8.5"
anyhow = "1"
base64 = "0.22.0"
serde_qs = "0.12"
serde_json = "1.0.115"
reqwest = { version = "0.12.2",features = ["json","rustls-tls"],default-features = false }
dotenvy = "0.15.7"